--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,10 @@
+{%load static%}
+
+<head>
+<link rel="stylesheet" type="text/css"
+href="{%static 'polls/style.css'%}">
+</head>
+
 {%if lastest_question_list%}
 <ul>
 {%for question in lastest_question_list%}
