--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -5,9 +5,9 @@
 href="{%static 'polls/style.css'%}">
 </head>
 
-{%if lastest_question_list%}
+{%if object_list%}
 <ul>
-{%for question in lastest_question_list%}
+{%for question in object_list%}
 <li>
 <a href="/{{question.id}}/">{{question.question_text}}</a>
 </li>
